--- a/CoffeeHouseProject/View/PaymentPage.xaml
+++ b/CoffeeHouseProject/View/PaymentPage.xaml
@@ -4,51 +4,58 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CoffeeHouseProject.View"
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <UserControl.Resources>
-        <Style TargetType="{x:Type TextBox}" x:Key="PlaceholderTextBoxStyle">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type TextBox}">
-                        <Grid>
-                            <TextBox x:Name="PART_TextBox" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="Transparent"/>
-                            <TextBlock x:Name="PART_Placeholder" Text="Введите текст..." Foreground="Gray" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="5,0,0,0" Visibility="Collapsed"/>
-                        </Grid>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsFocused" Value="True">
-                                <Setter TargetName="PART_Placeholder" Property="Visibility" Value="Collapsed"/>
-                            </Trigger>
-                            <Trigger Property="IsFocused" Value="False">
-                                <Setter TargetName="PART_Placeholder" Property="Visibility" Value="Visible"/>
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-    </UserControl.Resources>
+<!--<Control.Resources>
+    <Style TargetType="{x:Type xctk:MaskedTextBox}" BasedOn="{StaticResource {x:Type xctk:MaskedTextBox}}">
+        <Style.Triggers>
+            <Trigger Property="Validation.HasError" Value="True">
+                <Setter Property="Validation.ErrorTemplate">
+                    <Setter.Value>
+                        <ControlTemplate>
+                            <AdornedElementPlaceholder x:Name="placeholder"/>
+                            <ControlTemplate.Triggers>
+                                <DataTrigger Binding="{Binding AdornedElement.(Validation.HasError)}" Value="true">
+                                    <Setter TargetName="placeholder" Property="Visibility" Value="Collapsed"/>
+                                </DataTrigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+    </Control.Resources>-->
+
+
+
 
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
+        <TextBlock Grid.Column="1"  FontSize="10">Номер карты:</TextBlock>
+        <xctk:MaskedTextBox x:Name="CardNumber" HorizontalAlignment="Left" MinWidth="170" Grid.Column="1" Grid.Row="1"  FontSize="18" Grid.ColumnSpan="2" Mask="0000 0000 0000 0000" />
+        
+        <TextBlock Grid.Column="1" Grid.Row="2" FontSize="10">Срок действия:</TextBlock>
+        <xctk:MaskedTextBox x:Name="ExpirationDate" HorizontalAlignment="Left" MinWidth="60" Grid.Column="1" Grid.Row="3" FontSize="18"  Mask="00/00" />
 
-        <TextBox Grid.ColumnSpan="5" Margin="0,50,0,50" Text="{Binding CardNumber}" Style="{StaticResource PlaceholderTextBoxStyle}"></TextBox>
-        <TextBox Grid.Row="1" Text="{Binding MM}" Style="{StaticResource PlaceholderTextBoxStyle}"></TextBox>
-        <TextBlock Grid.Column="1" Grid.Row="1">/</TextBlock>
-        <TextBox Grid.Column="2" Grid.Row="1"></TextBox>
-        <TextBlock Grid.Column="3" Grid.Row="1">Три цифры на обороте карты</TextBlock>
-        <TextBox Grid.Column="4" Grid.Row="1"></TextBox>
+        <TextBlock Margin="50,0,0,0" Grid.Column="2" Grid.Row="2" FontSize="10">CVV/CVV2^</TextBlock>
+        <xctk:MaskedTextBox x:Name="CVV" HorizontalAlignment="Left" MinWidth="40" Margin="50,0,0,0" Grid.Column="2" Grid.Row="3" FontSize="18"  Mask="000" />
+
+        <Button x:Name="PayButton" Content="Оплатить" FontSize="15" Grid.Row="5" Margin="0,10,0,0" Grid.Column="2" Click="PayButton_OnClick"/>
     </Grid>
 
     
