--- a/CoffeeHouseProject/View/Account/AccountWindow.xaml
+++ b/CoffeeHouseProject/View/Account/AccountWindow.xaml
@@ -5,7 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CoffeeHouseProject.View.Account"
         mc:Ignorable="d"
-        Title="AccountWindow" Height="450" Width="800">
+        Title="Аккаунт" Height="450" Width="600">
+
+    
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
