--- a/CoffeeHouseProject/View/CartPage.xaml
+++ b/CoffeeHouseProject/View/CartPage.xaml
@@ -44,7 +44,7 @@
                                 <ColumnDefinition Width="auto"/>
                                 <ColumnDefinition Width="auto"/>
                                 <ColumnDefinition Width="auto"/>
-                                <ColumnDefinition Width="auto"/>
+                                <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
 
                             <Border Grid.Column="0" BorderBrush="Black" BorderThickness="0,0,1,0"  Width="100" Height="100" HorizontalAlignment="Left">
@@ -53,7 +53,7 @@
 
                             <TextBlock Text="{Binding Name}" Grid.Column="1" Margin="5,0,0,0" HorizontalAlignment="Center"/>
                             
-                            <StackPanel Orientation="Horizontal" Grid.Column="2">
+                            <StackPanel Margin="10,0,0,0" Orientation="Horizontal" Grid.Column="1">
                                 <Button Content="-" Width="25" Height="25"  >
                                     <b:Interaction.Triggers>
                                         <b:EventTrigger EventName="Click">
@@ -74,7 +74,7 @@
                             </StackPanel>
 
                                 
-                            <TextBlock Grid.Column="3" HorizontalAlignment="Center">
+                            <TextBlock Grid.Column="3" Margin="30,0,0,0" HorizontalAlignment="Center">
                                 <Run Text="Цена: "/>
                                 <Run Text="{Binding Price}" />
                                 <Run Text=" руб."/>
@@ -85,9 +85,9 @@
                                 <Run Text="{Binding TotalPrice}" />
                                 <Run Text=" руб."/>
                             </TextBlock>
-
-                            <StackPanel MaxWidth="100" Orientation="Horizontal" Grid.Column="5" Margin="5" HorizontalAlignment="Center">
-                                <Button Content="Удалить" Width="100" Height="30">
+    
+                            <!--<StackPanel MaxWidth="100" Orientation="Horizontal" Grid.Column="5"  HorizontalAlignment="Left">-->
+                                <Button Content="Удалить" Width="100" Height="30" HorizontalAlignment="Right" Grid.Column="5" Margin="10">
                                     <b:Interaction.Triggers>
                                         <b:EventTrigger EventName="Click">
                                             <b:InvokeCommandAction Command="{Binding DeleteOrderLineCommand}" />
@@ -95,7 +95,7 @@
                                         </b:EventTrigger>
                                     </b:Interaction.Triggers>
                                 </Button>
-                            </StackPanel>
+                            <!--</StackPanel>-->
                         </Grid>
                     </Border>
                 </DataTemplate>
