--- a/CoffeeHouseProject/View/MainWindow.xaml
+++ b/CoffeeHouseProject/View/MainWindow.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CoffeeHouseProject.ViewModel"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Кофейня" Height="450" Width="800">
+
     
+
     <ScrollViewer  VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
 
         <Grid>
